configure contact.html

--- a/python_blog/blog/templates/blog/base.html
+++ b/python_blog/blog/templates/blog/base.html
@@ -39,7 +39,7 @@
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{% url 'home-page' %}"><i class="fa fa-home"></i> Home</a>
                     <a class="nav-item nav-link" href="{% url 'about-page' %}"><i class="fa fa-user"></i> About</a>
-                    <a class="nav-item nav-link" href="#"><i class="fa fa-address-book"></i> Contact</a>
+                    <a class="nav-item nav-link" href="{% url 'contact-page' %}"><i class="fa fa-address-book"></i> Contact</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
