--- a/python_blog/blog/templates/blog/news.html
+++ b/python_blog/blog/templates/blog/news.html
@@ -1,2 +1,19 @@
 {% extends 'blog/base.html' %}
 
+{% block body %}
+
+    <div class="container">
+        <div class="row">
+
+
+            <div class="column">
+                <!-- start feedwind code -->
+                <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Loading..."
+                        data-fw-param="139323/"></script> <!-- end feedwind code -->
+            </div>
+
+
+        </div>
+    </div>
+
+{% endblock %}
