--- a/python_blog/blog/templates/blog/about.html
+++ b/python_blog/blog/templates/blog/about.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
-{% block content %}
-    <h1>About page</h1>
 
-{% endblock content %}
+{% block body %}
+
+
+{% endblock %}
