--- a/python_blog/blog/templates/blog/base.html
+++ b/python_blog/blog/templates/blog/base.html
@@ -45,8 +45,16 @@
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="{% url 'register' %}"><i class="fa fa-registered"></i>
-                        Register</a>
+
+
+                    {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Logout</a>
+                    {% else %}
+                        <a class="nav-item nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in"></i>
+                            Login</a>
+                        <a class="nav-item nav-link" href="{% url 'register' %}"><i class="fa fa-registered"></i>Register</a>
+                    {% endif %}
+
                 </div>
             </div>
         </div>
