--- a/python_blog/blog/templates/blog/base.html
+++ b/python_blog/blog/templates/blog/base.html
@@ -48,7 +48,8 @@
 
 
                     {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Logout</a>
+                        <a class="nav-item nav-link" href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a>
+                        <a class="nav-item nav-link" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Logout</a>
                     {% else %}
                         <a class="nav-item nav-link" href="{% url 'login' %}"><i class="fa fa-sign-in"></i>
                             Login</a>
