update user profile
creating two forms (UserUpdateForm, ProfileUpdateForm),
creating one view, modification on profile.html

--- a/python_blog/blog/static/blog/main.css
+++ b/python_blog/blog/static/blog/main.css
@@ -1,9 +1,7 @@
 body {
     background-image: url("https://i.pinimg.com/originals/df/f1/55/dff15531f364a0a76b0e8d6cf64ee6b1.jpg");
-
     margin-top: 7rem;
 }
-
 
 p {
     letter-spacing: 1px;
@@ -33,16 +31,17 @@ p {
 
 .content-section {
     background: #e3dede;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: 0 solid #e0d6d6;
-    border-radius: 10px;
-    margin-bottom: 17px;
+
+    /**оформяне на посответе*!*/
+    border-radius: 60px;
+    margin-bottom: 10px;
 }
 
 
 .article-title {
-    color: #966F33
-;
+    color: #966F33;
 }
 
 
@@ -60,7 +59,7 @@ a.article-title:hover {
 .article-img {
     height: 100px;
     width: 100px;
-    margin-right: 20px;
+    margin-right: 5px;
 }
 
 
@@ -85,15 +84,15 @@ a.article-title:hover {
 
 
 .account-img {
-    height: 125px;
-    width: 125px;
+    height: 205px;
+    width: 205px;
     margin-right: 20px;
     margin-bottom: 16px;
 }
 
 
 .account-heading {
-    font-size: 2.2rem;
+    font-size: 2.0rem;
 }
 
 
