--- a/python_blog/blog/templates/blog/contact.html
+++ b/python_blog/blog/templates/blog/contact.html
@@ -58,14 +58,14 @@
     <form class="" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="fname">Your Name</label>
+            <label for="fname"></label>
             <input name="name" type="text" id="fname" class="form-control" placeholder="Your name.." required>
 
-            <label for="exampleInputEmail1">Your email</label>
+            <label for="exampleInputEmail1"></label>
             <input name='email' class="form-control" id="exampleInputEmail1" placeholder="Your email.."
                    aria-describedby="emailHelp" required>
 
-            <label for="subject">Subject</label>
+            <label for="subject"></label>
             <textarea class="form-control" id="subject" name="subject" placeholder="Write something.."
                       style="height:200px"></textarea>
 
