--- a/python_blog/users/templates/users/profile.html
+++ b/python_blog/users/templates/users/profile.html
@@ -1,4 +1,5 @@
-{% extends "blog/base.html" %}
+{% extends 'blog/base.html' %}
+{#зареждане на bootstrap django чрез crispy#}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
@@ -9,5 +10,20 @@
                 <p class="text-secondary">{{ user.email }}</p>
             </div>
         </div>
+        <!-- FORM HERE -->
+
+        <!-- формата за профила на потребителя -->
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Profile Info</legend>
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Update</button>
+            </div>
+        </form>
     </div>
 {% endblock content %}
