--- a/python_blog/blog/templates/blog/home.html
+++ b/python_blog/blog/templates/blog/home.html
@@ -3,6 +3,7 @@
     {% for post in posts %}
 
         <article class="media content-section">
+        <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
             <div class="media-body">
                 <div class="article-metadata">
                     <a class="mr-2" href="#">{{ post.author }}</a>
@@ -13,7 +14,8 @@
                 <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
-
-
     {% endfor %}
 {% endblock content %}
+
+
+{#<img class="rounded-bottom article-img"#}
