--- a/python_blog/blog/templates/blog/base.html
+++ b/python_blog/blog/templates/blog/base.html
@@ -46,10 +46,8 @@
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
 
-
                     {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="#">New Post</a>
-
+                        <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                         <a class="nav-item nav-link" href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a>
                         <a class="nav-item nav-link" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Logout</a>
                     {% else %}
@@ -57,7 +55,6 @@
                             Login</a>
                         <a class="nav-item nav-link" href="{% url 'register' %}"><i class="fa fa-registered"></i>Register</a>
                     {% endif %}
-
                 </div>
             </div>
         </div>
@@ -70,6 +67,13 @@
 
     <div class="row">
         <div class="col-md-8">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert-{{ message.tags }} ">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
 
             {% block content %}{% endblock %}
         </div>
