--- a/python_blog/blog/templates/blog/home.html
+++ b/python_blog/blog/templates/blog/home.html
@@ -10,7 +10,7 @@
                     <small class="text-muted">
                         {{ post.date_posted|date:'d-F-Y --' }}{{ post.date_posted|time:'-- H:i:s' }}</small>
                 </div>
-                <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
