--- a/python_blog/blog/templates/blog/post_detail.html
+++ b/python_blog/blog/templates/blog/post_detail.html
@@ -10,8 +10,8 @@
                 {% if object.author == user %}
                     <div>
                         <a class="btn btn-secondary btn-sm mt-1 mb-1"
-                           href="#">Update</a>
-                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="#">Delete</a>
+                           href="{% url 'post-update' object.id %}">Update</a>
+                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
                     </div>
                 {% endif %}
             </div>
@@ -20,5 +20,9 @@
         </div>
     </article>
 {% endblock %}
+
+
+
+
 
 
