--- a/python_blog/blog/templates/blog/user_posts.html
+++ b/python_blog/blog/templates/blog/user_posts.html
@@ -1,20 +1,26 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+    <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
     {% for post in posts %}
-
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+
             <div class="media-body">
                 <div class="article-metadata">
                     <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
                     <small class="text-muted">
                         {{ post.date_posted|date:'d-F-Y --' }}{{ post.date_posted|time:'-- H:i:s' }}</small>
                 </div>
+                {#                поставяме {% url 'post-detail' post.id %} , при натискане на коментар, да се отваря#}
                 <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
     {% endfor %}
+
+    {#  ако е валидно, да има повече от зададените допустими постове на страница,#}
+    {#  изпълни и добави бутони за смяна на страниците#}
+    {#    има го в дкументацията за джанго --> Paginating a ListView¶#}
     {% if is_paginated %}
 
         {% if page_obj.has_previous %}
@@ -36,6 +42,7 @@
         {% endif %}
 
     {% endif %}
+{% endblock %}
 
-{% endblock content %}
+
 
