--- a/python_blog/users/templates/users/login.html
+++ b/python_blog/users/templates/users/login.html
@@ -5,11 +5,14 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log in</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
+                <small class="text-muted ml-2">
+                    <a href="#">Forgot Password?</a>
+                </small>
             </div>
         </form>
         <div class="border-top pt-3">
