updating news page

--- a/python_blog/blog/templates/blog/news.html
+++ b/python_blog/blog/templates/blog/news.html
@@ -1,19 +1,109 @@
 {% extends 'blog/base.html' %}
-
 {% block body %}
 
-    <div class="container">
-        <div class="row">
+    <!DOCTYPE html>
+    <html>
+    <title>W3.CSS Template</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+    <style>
+        body, h1, h2, h3, h4, h5, h6 {
+            font-family: "Karma", sans-serif
+        }
+
+        .w3-bar-block .w3-bar-item {
+            padding: 20px
+        }
+    </style>
+    <body>
 
 
-            <div class="column">
-                <!-- start feedwind code -->
-                <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Loading..."
-                        data-fw-param="139349/"></script> <!-- end feedwind code -->
+    <!-- !PAGE CONTENT! -->
+    <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
+
+        <!-- First Photo Grid-->
+        <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+            <div class="w3-quarter">
+                <img src="https://images.idgesg.net/images/article/2017/10/halloween2-dayofthedead-100740086-large.jpg"
+                     alt="Sandwich" style="width:100%">
+                <h2>Pyston returns from the dead to speed Python</h2>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://www.infoworld.com/article/3587591/pyston-returns-from-the-dead-to-speed-python.html">Picking
+                        up where Dropbox left off, a new development team has
+                        released a fresh version of the just-in-time optimizing...
+                    </a>.
             </div>
 
-
+            <div class="w3-quarter">
+                <img src="https://images.idgesg.net/images/article/2019/06/number-8_infinity-symbol_silver_8-tips_by-photo-by-doguhakan-getty-100799035-large.jpg"
+                     alt="Steak" style="width:100%">
+                <h2>8 great little Python web frameworks</h2>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://www.infoworld.com/article/3586120/8-great-little-python-web-frameworks.html">Small
+                        is beautiful. Look to these Python web frameworks when you
+                        want speed and simplicity instead of feature sprawl...</a>
+            </div>
+            <div class="w3-quarter">
+                <img src="https://i.redd.it/rxezjyf4ojx41.png" alt="Cherries" style="width:100%">
+                <h2>You can already test 3.10.0a1!</h2>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://hub.packtpub.com/python-3-9-0-is-now-available-and-you-can-already-test-3-10-0a1-from-python-insider/">Python
+                        3.9.0 is now available, and you can already test 3.10.0a1!
+                        from Python Insider...
+                    </a>
+            </div>
+            <div class="w3-quarter">
+                <img src="https://cdn.lynda.com/course/786416/786416-637286263889326221-16x9.jpg"
+                     alt="Pasta and Wine" style="width:110%">
+                <h2>Python in Visual Studio</h2>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://hub.packtpub.com/microsoft-releases-the-python-language-server-in-visual-studio/">Microsoft
+                        releases the Python Language Server in Visual Studio...</a>
+            </div>
         </div>
+
+        <!-- Second Photo Grid-->
+        <div class="w3-row-padding w3-padding-16 w3-center">
+            <div class="w3-quarter">
+                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Popsicle" style="width:100%">
+                <h1>Company</h1>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://www.python.org/">We’re a team of professionals working
+                        hard to provide free learning content...</a>
+            </div>
+            <div class="w3-quarter">
+                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Salmon" style="width:100%">
+                <h1>Company</h1>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://www.python.org/">We’re a team of professionals working
+                        hard to provide free learning content</a>
+            </div>
+            <div class="w3-quarter">
+                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Sandwich" style="width:100%">
+                <h1>Company</h1>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://www.python.org/">We’re a team of professionals working
+                        hard to provide free learning content</a>
+            </div>
+            <div class="w3-quarter">
+                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Croissant" style="width:100%">
+                <h1>Company</h1>
+                <p style="font-family: Verdana,serif">
+                    <a href="https://www.python.org/">We’re a team of professionals working
+                        hard to provide free learning content</a>
+                </p>
+            </div>
+        </div>
+
     </div>
 
+    </body>
+    </html>
 {% endblock %}
+
+
+
+
+
