--- a/python_blog/blog/templates/blog/news.html
+++ b/python_blog/blog/templates/blog/news.html
@@ -9,13 +9,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
     <style>
-        body, h1, h2, h3, h4, h5, h6 {
-            font-family: "Karma", sans-serif
-        }
 
-        .w3-bar-block .w3-bar-item {
-            padding: 20px
-        }
+
     </style>
     <body>
 
@@ -26,6 +21,7 @@
         <!-- First Photo Grid-->
         <div class="w3-row-padding w3-padding-16 w3-center" id="food">
             <div class="w3-quarter">
+                {#1#}
                 <img src="https://images.idgesg.net/images/article/2017/10/halloween2-dayofthedead-100740086-large.jpg"
                      alt="Sandwich" style="width:100%">
                 <h2>Pyston returns from the dead to speed Python</h2>
@@ -37,6 +33,7 @@
             </div>
 
             <div class="w3-quarter">
+                {#2#}
                 <img src="https://images.idgesg.net/images/article/2019/06/number-8_infinity-symbol_silver_8-tips_by-photo-by-doguhakan-getty-100799035-large.jpg"
                      alt="Steak" style="width:100%">
                 <h2>8 great little Python web frameworks</h2>
@@ -46,6 +43,7 @@
                         want speed and simplicity instead of feature sprawl...</a>
             </div>
             <div class="w3-quarter">
+                {#3#}
                 <img src="https://i.redd.it/rxezjyf4ojx41.png" alt="Cherries" style="width:100%">
                 <h2>You can already test 3.10.0a1!</h2>
                 <p style="font-family: Verdana,serif">
@@ -55,6 +53,7 @@
                     </a>
             </div>
             <div class="w3-quarter">
+                {#4#}
                 <img src="https://cdn.lynda.com/course/786416/786416-637286263889326221-16x9.jpg"
                      alt="Pasta and Wine" style="width:110%">
                 <h2>Python in Visual Studio</h2>
@@ -63,36 +62,47 @@
                         releases the Python Language Server in Visual Studio...</a>
             </div>
         </div>
-
         <!-- Second Photo Grid-->
         <div class="w3-row-padding w3-padding-16 w3-center">
             <div class="w3-quarter">
-                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Popsicle" style="width:100%">
-                <h1>Company</h1>
+                {#5#}
+                <img src="https://images.idgesg.net/images/article/2019/10/cio_cw_woman_carefully_studying_survey_data_analysis_information_by_laurence_dutton_gettyimages-1129342100_2400x1600-100815759-large.jpg"
+                     alt="Popsicle" style="width:100%">
+                <h2>7 superb Python books for every skill level</h2>
                 <p style="font-family: Verdana,serif">
-                    <a href="https://www.python.org/">We’re a team of professionals working
-                        hard to provide free learning content...</a>
+                    <a href="https://www.python.org/">Whether
+                        you’re a beginner, a moderately skilled dev, or an expert,
+                        there’s a book in this lineup to expand your Python programming powers...</a>
             </div>
             <div class="w3-quarter">
-                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Salmon" style="width:100%">
-                <h1>Company</h1>
+                {#6#}
+                <img src="https://i.morioh.com/9b0ec7c8e7.png" alt="Salmon" style="width:100%">
+                <h3>Netflix open-sources Metaflow, its Python framework for building and managing data science
+                    projects</h3>
                 <p style="font-family: Verdana,serif">
-                    <a href="https://www.python.org/">We’re a team of professionals working
-                        hard to provide free learning content</a>
+                    <a href="https://hub.packtpub.com/netflix-open-sources-metaflow-its-python-framework-for-building-and-managing-data-science-projects/">Yesterday,
+                        the Netflix team announced to open-source Metaflow, a Python library that
+                        helps scientists and engineers build and...</a>
             </div>
             <div class="w3-quarter">
-                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Sandwich" style="width:100%">
-                <h1>Company</h1>
+                {#7#}
+                <img src="https://i1.wp.com/datascienceunlimited.tech/wp-content/uploads/2019/10/IMG_E97DF1FD224F-1.jpeg?fit=1024%2C668&ssl=1"
+                     alt="Sandwich" style="width:100%">
+                <h3>How to perform exception handling in Python with ‘try, catch and finally’</h3>
                 <p style="font-family: Verdana,serif">
-                    <a href="https://www.python.org/">We’re a team of professionals working
-                        hard to provide free learning content</a>
+                    <a href="https://hub.packtpub.com/how-to-perform-exception-handling-in-python-with-try-catch-and-finally/">An
+                        integral part of using Python involves the art of handling
+                        exceptions. There are primarily two types of...</a>
             </div>
             <div class="w3-quarter">
-                <img src="https://static.toiimg.com/photo/72975551.cms" alt="Croissant" style="width:100%">
-                <h1>Company</h1>
+                {#8#}
+                <img src="https://cdn57.androidauthority.net/wp-content/uploads/2019/08/Data-Science-Analysis-Working-1200x675.jpg"
+                     alt="Croissant" style="width:100%">
+                <h2>How to write to a file in Python</h2>
                 <p style="font-family: Verdana,serif">
-                    <a href="https://www.python.org/">We’re a team of professionals working
-                        hard to provide free learning content</a>
+                    <a href="https://hub.packtpub.com/how-to-write-to-a-file-in-python-txt-docx-csv-and-more-from-android-development-android-authority/">How
+                        to write to a file in Python — Txt, Docx, CSV, and more! from
+                        Android Development – Android Authority</a>
                 </p>
             </div>
         </div>
