updating contact page

--- a/python_blog/blog/templates/blog/contact.html
+++ b/python_blog/blog/templates/blog/contact.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/1387/1387537.svg">
+
     <title>Contact-Blog</title>
 </head>
 
@@ -86,25 +89,25 @@
 
             <div class="contact-items">
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
+                    <div class="icon"><img src="https://img.icons8.com/android/96/000000/facebook-new.png"/></div>
                     <div class="contact-info">
-                        <h1>Phone</h1>
-                        <h2>0884803257</h2>
-                        <h2></h2>
+                        <a href="https://www.facebook.com/emilian.e.stoyanov/"><h1>Facebook</h1></a>
+                        <h2>Welcome to mine Facebook</h2>
+
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
+                    <div class="icon"><img src="https://img.icons8.com/ios-filled/96/000000/linkedin.png"/></div>
                     <div class="contact-info">
-                        <h1>Email</h1>
-                        <h2></h2>
+                        <a href="https://www.linkedin.com/in/emilian-stoyanov-1aa7051ba/"><h1>Linkedin</h1></a>
+                        <h2>Welcome to mine Linkedin</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
+                    <div class="icon"><img src="https://img.icons8.com/ios-filled/96/000000/github.png"/></div>
                     <div class="contact-info">
-                        <h1>Address</h1>
-                        <h2>Fatikchhari, Chittagong, Bangladesh</h2>
+                        <a href="https://github.com/EmilianStoyanov"><h1>GitHub</h1></a>
+                        <h2>Welcome to mine GitHub</h2>
                     </div>
                 </div>
             </div>
